--- a/issue_tracker/staticfiles/css/style.scss
+++ b/issue_tracker/staticfiles/css/style.scss
@@ -278,6 +278,7 @@ nav div.expand {
 
 .dropdown {
   display: none;
+  background-color: $c-primary;
 }
 
 .dropdown li {
@@ -285,6 +286,7 @@ nav div.expand {
 }
 
 .dropdown-toggle {
+  padding-left: 1rem;
   cursor: pointer;
 }
 
@@ -297,6 +299,7 @@ nav div.expand {
 }
 
 nav ul .collapse li {
+  position: relative;
   padding: .3em 1em;
   transition: all .5s;
   &:hover {
